ajustado para react

--- a/FinanceManagement/FinanceManagement/appsettings.json
+++ b/FinanceManagement/FinanceManagement/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     "EugenioPC": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=DBFinanceManagement;Integrated Security=True",
     "AlefPC": "Password=nascsa4259;Persist Security Info=True; User ID=sa;Initial Catalog=financeManagement;Data Source=ALEF-PC",
-    "AlanPC": "Password=alan1704;Persist Security Info=True; User ID=sa;Initial Catalog=financeManagement;Data Source=localhost"
-    //DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FinanceManagement-935BB0C2-A37A-4A7B-8091-86025BD2BFAF;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AlanPC": "Password=alan1704;Persist Security Info=True; User ID=sa;Initial Catalog=financeManagement;Data Source=localhost",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FinanceManagement;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
