--- a/FinanceManagement/FinanceManagement/ClientApp/package.json
+++ b/FinanceManagement/FinanceManagement/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "date-fns": "^2.19.0",
     "jquery": "^3.6.0",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
@@ -13,7 +14,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
