--- a/FinanceManagement/FinanceManagement/ClientApp/package.json
+++ b/FinanceManagement/FinanceManagement/ClientApp/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^2.19.0",
     "jquery": "^3.6.0",
     "merge": "^1.2.1",
+    "numeral": "^2.0.6",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
